--- a/favorite/src/main/res/layout/fragment_favorite_movie.xml
+++ b/favorite/src/main/res/layout/fragment_favorite_movie.xml
@@ -17,10 +17,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/items_movie">
+        tools:listitem="@layout/items_movie"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/pg_empty"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="empty.json"
+        app:lottie_loop="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <ProgressBar
         android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyle"
