--- a/favorite/src/main/res/layout/fragment_favorite_tvshow.xml
+++ b/favorite/src/main/res/layout/fragment_favorite_tvshow.xml
@@ -16,9 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/items_tvshow">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        tools:listitem="@layout/items_tvshow"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -27,6 +25,18 @@
         android:layout_height="wrap_content"
         android:theme="@style/progressBarYellow"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/pg_empty"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="empty.json"
+        app:lottie_loop="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
